--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
       "import/prefer-default-export": [0],
       "react/no-array-index-key": [0],
        "arrow-body-style": [0], 
-       "prefer-arrow-callback": [0] 
+       "prefer-arrow-callback": [0],
+       "react/function-component-definition": "off",
+       "no-unused-vars": "warn"
     }
   }
